<resources>
    <string name="app_name">WLB Timer</string>

    <string name="title_home">Home</string>

    <string name="btn_add">Add</string>
    <string name="btn_list">List</string>
    <string name="btn_data">Data</string>
    <string name="ab_sign_out">Sign out</string>

    <string name="running_text_view">Running</string>
    <string name="running_details_text_view">Running Details</string>

    <string name="bottom_sheet_session_heading">Session Details</string>

    <string name="bottom_sheet_start_date_time">Start Date</string>
    <string name="bottom_sheet_start_timezone">Start Time/Zone</string>

    <string name="bottom_sheet_end_date_time">End Date</string>
    <string name="bottom_sheet_end_timezone">End Time/Zone</string>

    <string name="bottom_sheet_breaks">Breaks</string>
    <string name="bottom_sheet_breaks_desc">Total Break Time</string>

    <string name="bottom_sheet_duration">Duration</string>
    <string name="bottom_sheet_duration_desc">Time weighted, excl. Breaks</string>

    <string name="bottom_sheet_note">Note</string>
    <string name="bottom_sheet_category">Category</string>

    <string name="bottom_sheet_remove_session">Remove</string>


    <string name="greeting">Hello World!</string>
    <string name="greeting2">Hello to you too!</string>
    <string name="user">User</string>

    <string name="backend_ver">Backend Version</string>
    <string name="client_version">Client Version</string>

    <string name="btn_demo">Get Backend Version</string>
    <string name="btn_update">Update</string>
    <string name="btn_crash">Crash</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_list">ListActivity</string>

    <!-- Strings related to Top Navigation -->
    <string name="top_nav_add">Add</string>
    <string name="top_nav_report">Report</string>


    <!-- Strings related to Drawer Navigation -->
    <string name="drawer_nav_title_top">WLB</string>
    <string name="drawer_nav_title_customize">Customize</string>
    <string name="drawer_nav_home">Home</string>
    <string name="drawer_nav_sessions">All Entries</string>
    <string name="drawer_nav_break">Break Rules</string>
    <string name="drawer_nav_categories">Categories</string>
    <string name="drawer_nav_category_work">Work</string>
    <string name="drawer_nav_category_off">Off</string>
    <string name="drawer_nav_note">Note</string>
    <string name="drawer_nav_report">Reports</string>
    <string name="drawer_nav_settings">Settings</string>
    <string name="drawer_nav_help">Help</string>

    <string name="drawer_nav_sign_out">Sign Out</string>


    <string name="pref_category_license">Category License</string>
    <string name="pref_license_summary">License Summary</string>
    <string name="pref_license">License</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>


    <string name="pref_key_cloud_sync">cloud_sync_switch</string>
    <string name="pref_title_cloud_sync">Sync to account</string>
    <string name="pref_description_cloud_sync">Use immediate sync to save all data to
        cloud account</string>



    <!-- Strings related to Settings (Drawer -> Settings) -->
    <string name="pref_settings_top_title">Settings</string>

    <string name="pref_settings_category">Account</string>

    <string name="pref_settings_account_key">pref_settings_account_key</string>
    <string name="pref_settings_account_summary">mail@example.com</string>
    <string name="pref_settings_account_title">View Account Details</string>

    <string name="pref_settings_account_last_sign_in_key">pref_settings_account_last_sign_in_key</string>
    <string name="pref_settings_account_last_sign_in_summary">Never</string>
    <string name="pref_settings_account_last_sign_in_title">Last Sign In</string>

    <string name="pref_settings_account_nickname_key">pref_settings_account_nickname_key</string>
    <string name="pref_settings_account_nickname_summary">N/A</string>
    <string name="pref_settings_account_nickname_title">Nickname</string>


    <string name="pref_settings_work_days">Work Days</string>

    <string name="pref_settings_work_days_select_key">pref_settings_work_days_select_key</string>
    <string name="pref_settings_work_days_select_summary">Mo-Su</string>
    <string name="pref_settings_work_days_select_title">Work Days</string>

    <string-array name="pref_settings_work_days_select_entries">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="pref_settings_work_days_select_values">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>

    <string-array name="pref_settings_work_days_select_default">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
    </string-array>


    <!-- Strings related to Help (Drawer -> Help) -->
    <string name="pref_help_top_title">Help</string>

    <string name="pref_help_feedback_key" translatable="false">pref_help_feedback_key</string>
    <string name="pref_help_feedback_summary">Send us some feedback</string>
    <string name="pref_help_feedback_title">Feedback</string>

    <string name="pref_help_category_additional_info">Additional Information</string>

    <string name="pref_help_imprint_key" translatable="false">pref_help_imprint_key</string>
    <string name="pref_help_imprint_title">Imprint</string>

    <string name="pref_help_privacy_key" translatable="false">pref_help_privacy_key</string>
    <string name="pref_help_privacy_title">Privacy</string>

    <string name="pref_help_tos_key" translatable="false">pref_help_tos_key</string>
    <string name="pref_help_tos_title">Terms of Service</string>

    <string name="pref_help_licenses_key" translatable="false">pref_help_licenses_key</string>
    <string name="pref_help_licenses_title">Licenses</string>

    <string name="pref_help_category_about_app">About this App</string>

    <string name="pref_help_homepage_key" translatable="false">pref_help_homepage_key</string>
    <string name="pref_help_homepage_summary">https://home</string>
    <string name="pref_help_homepage_title">Homepage</string>

    <string name="pref_help_version_key" translatable="false">pref_help_version_key</string>
    <string name="pref_help_version_summary">1.2.3</string>
    <string name="pref_help_version_title">Version</string>



    <string name="session_cancel_delete">Cancel</string>
    <string name="session_confirm_delete">Delete</string>

    <string name="pref_default_language">Default upload language</string>
    <string name="pref_default_language_summary">Default language for uploads</string>

    <string name="title_activity_breaks">Breaks</string>
    <string name="content_breaks_text">
        "Automatically added breaks\n\n"

        "WLB Timer uses built-in rules to automatically add breaks to work sessions. These rules"
        "are currently preconfigured and can't be changed.\n\n"
        "The amount of 15 minutes break time is added for every 2.5 hours of work:\n\n"
        "- less than 2:30 = 0:00 break time\n"
        "- from 2:31 to 5:00 = 0:15 break time\n"
        "- from 5:01 to 7:30 = 0:30 break time\n"
        "- from 7:31 to 10:00 = 0:45 break time\n"
        "- more than 10:00 = 1:00 break time\n\n"
        "This break time value can be changed per session in the detail view.\n\n"
        "The time is calculated when the STOP button is pressed.\n\n"
    </string>

    <!-- CategoryOff -->
    <string name="title_activity_category_off">Categories (Off)</string>
    <string name="title_activity_category_off_add">Add Category (Off)</string>
    <string name="title_activity_category_off_update">Update Category (Off)</string>

    <string name="update_category_off_title_hint">Title</string>


    <!-- Category -->
    <string name="title_activity_category_work">Categories (Work)</string>
    <string name="title_activity_category_work_add">Add Category (Work)</string>
    <string name="title_activity_category_work_update">Update Category (Work)</string>

    <string name="update_category_work_title">Title</string>
    <string name="update_category_work_factor">1.00</string>

    <string name="color_picker_set_color_button">Set Color</string>
    <string name="color_picker_show_color_text_view">Category Color</string>


    <!-- Note (Demo) -->
    <string name="title_activity_note">Notes</string>
    <string name="title_activity_session">Sessions</string>

    <string name="list_item_session_date_dummy">2019–01–31</string>
    <string name="list_item_session_start_dummy">09:00</string>
    <string name="list_item_session_end_dummy">17:00</string>
    <string name="list_item_session_duration_dummy">7:30</string>


    <!-- Main screen -->
    <string name="top_left">Top left</string>
    <string name="top_right">Top right</string>

    <string name="last_10_entries">10 Days: %1$S</string>
    <string name="work_week">Work Week: %1$S</string>

    <string name="last_n_entries">Last %1$S entries</string>

    <string name="cd_btn_start_new">Start new session</string>
    <string name="cd_btn_stop_running">Stop running session</string>

    <string name="main_add_off">Day Off</string>
    <string name="main_add_work">Work</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_version">Version</string>


</resources>
