<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
            android:key="@string/pref_help_feedback_key"
            android:summary="@string/pref_help_feedback_summary"
            android:title="@string/pref_help_feedback_title"/>

    <PreferenceCategory android:title="@string/pref_help_category_additional_info">

        <Preference
                android:key="@string/pref_help_imprint_key"
                android:title="@string/pref_help_imprint_title"/>

        <Preference
                android:key="@string/pref_help_privacy_key"
                android:title="@string/pref_help_privacy_title"/>

        <Preference
                android:key="@string/pref_help_tos_key"
                android:title="@string/pref_help_tos_title"/>

        <Preference
                android:key="@string/pref_help_licenses_key"
                android:title="@string/pref_help_licenses_title"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_help_category_about_app">

        <Preference
                android:key="@string/pref_help_homepage_key"
                android:summary="@string/pref_help_homepage_summary"
                android:title="@string/pref_help_homepage_title">
            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.example.com"/>
        </Preference>
        <Preference
                android:key="@string/pref_help_version_key"
                android:summary="@string/pref_help_version_summary"
                android:title="@string/pref_help_version_title"/>

    </PreferenceCategory>

</PreferenceScreen>