<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/grpid10"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_format_list_bulleted_white_24dp"
            android:title="@string/drawer_nav_sessions" />
    </group>

    <item android:title="@string/drawer_nav_categories">
        <menu>
            <group
                android:id="@+id/grpid20"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_category_off"
                    android:icon="@drawable/ic_golf_course_black_24dp"
                    android:title="@string/drawer_nav_category_off" />

                <item
                    android:id="@+id/nav_category_work"
                    android:icon="@drawable/ic_location_city_white_24dp"
                    android:title="@string/drawer_nav_category_work" />

            </group>
        </menu>
    </item>

    <item android:title="Dev">
        <menu>
            <group
                android:id="@+id/grpid30"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_break"
                    android:icon="@drawable/ic_free_breakfast_black_24dp"
                    android:title="@string/drawer_nav_break" />

                <item
                    android:id="@+id/nav_category_note"
                    android:icon="@drawable/ic_note_black_24dp"
                    android:title="@string/drawer_nav_note" />

                <item
                    android:id="@+id/nav_report"
                    android:icon="@drawable/ic_insert_chart_black_24dp"
                    android:title="@string/drawer_nav_report" />
            </group>
        </menu>
    </item>

    <item android:title="Foobar">
        <menu>
            <group
                android:id="@+id/grpid40"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/drawer_nav_settings" />
                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/drawer_nav_sign_out" />
            </group>
        </menu>
    </item>

</menu>