<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/fragment_session_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/list_item_session_date_dummy"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_session_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/fragment_session_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_circle_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/fragment_session_date"
        android:drawableTint="@color/md_bottom_sheet_text_color" />

    <TextView
        android:id="@+id/fragment_session_ts_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_session_start_dummy"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_session_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_session_ts_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/list_item_session_end_dummy"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_session_ts_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_session_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_session_duration_dummy"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fragment_session_ts_end"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
