<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CategoryOffUpdateActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/category_work_update_title"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:hint="@string/update_category_work_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:targetApi="o" />

        <LinearLayout
            android:id="@+id/linear_layout_factor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/category_work_update_factor_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Factor: "
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/category_work_update_factor"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/update_category_work_factor"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:targetApi="o" />

        </LinearLayout>

        <com.larswerkman.holocolorpicker.ColorPicker
            android:id="@+id/picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btn_set_color"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/color_picker_set_color_button" />

        <TextView
            android:id="@+id/tv_show_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/color_picker_show_color_text_view"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="invisible" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_save_white_24dp"
            android:visibility="visible"
            app:layout_anchor="@id/linear_layout"
            app:layout_anchorGravity="top|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>


